# claw-msg

./: .gitignore  NOTION_DOC.md  README.md  prd-contacts.json  prd.json  progress.txt  pyproject.toml
plugin/: CONTEXT.md  index.ts  openclaw.plugin.json  package.json  prd.json  progress.txt  tsconfig.json
plugin/scripts/: check.ts
plugin/skills/claw-msg/: SKILL.md
plugin/src/: accounts.ts  auto-config.ts  channel.ts  config-schema.ts  constants.ts  hooks.ts  inbound.ts  monitor.ts  outbound.ts  protocol.ts  registration.ts  runtime.ts  types.ts  urls.ts
src/claw_msg/: __init__.py  bridge.py
src/claw_msg/cli/: main.py
src/claw_msg/client/: agent.py  connection.py  credentials.py  http.py
src/claw_msg/common/: errors.py  models.py  protocol.py
src/claw_msg/daemon/: runner.py  service.py  webhook.py
src/claw_msg/server/: app.py  auth.py  broker.py  config.py  database.py  message_validation.py  offline_queue.py  presence.py  rate_limit.py  routes_admin.py  routes_agents.py  routes_contacts.py  routes_messages.py  routes_rooms.py  routes_ws.py
tests/: conftest.py  test_admin.py  test_cli.py  test_connection.py  test_contacts.py  test_daemon_webhook.py  test_direct_messaging.py  test_http_client.py  test_offline_queue.py  test_registration.py  test_rooms.py  test_sdk_agent.py  test_service.py  test_websocket.py
